tests/NormalTests/paczka1/fuzzy1/74100551.err
Error in line 4: reRSb8y6d A13 97,7
Error in line 8: reRSb8y6d A911 57,5
Error in line 13: Fr5tVu A13 25,7
Error in line 20: DI4Pi A13 13,9
Error in line 28: DI4Pi S469 75,1
Error in line 30: DI4Pi A911 58,2
